# protenderizer

./: .env.example  .gitignore  README.md  notices.json  pyproject.toml  pytest.ini
.github/workflows/: test.yml
analyzer/: __init__.py  api.py  arima.py  cli.py  config.py  main.py  ml.py  pipeline.py  preprocessing.py  storage.py  sync.py  visualization.py
analyzer/templates/: fetch.html
plantuml/: b-puml.puml  protenderizer-component.puml  protenderizer-container.puml  protenderizer-context.puml  protenderizer-usecase.puml
plantuml/C4-PlantUML/samples/: C4_Component Diagram Sample - bigbankplc.puml  C4_Container Diagram Sample - bigbankplc.puml  C4_Container Diagram Sample - message bus.puml  C4_Container Diagram Sample - techtribesjs.puml  C4_Context Diagram Sample - bigbankplc-landscape.puml  C4_Context Diagram Sample - bigbankplc.puml  C4_Context Diagram Sample - enterprise.puml  C4_Deployment Diagram Sample - bigbankplc-details.puml  C4_Deployment Diagram Sample - bigbankplc.puml
tests/integration/: test_api_integration.py  test_data_retrieval_integration.py  test_full_sync_flow.py  test_ml_pipeline_integration.py  test_storage_backends.py  test_storage_integration.py  test_sync_integration.py
tests/performance/: test_arima_performance.py  test_load_sync.py  test_performance_ml.py  test_storage_performance.py
tests/unit/: test_api.py  test_arima.py  test_cli.py  test_cli_commands.py  test_data_preprocessing.py  test_data_retrieval.py  test_data_storage.py  test_ml_models.py  test_preprocessing.py  test_storage.py  test_sync.py  test_visualization.py
