[project]
name = "protenderizer"
version = "0.1.0"
description = "An intelligent tool for monitoring and analyzing EU public procurement data."
requires-python = ">=3.8"
dependencies = [
    "click",
    "requests",
    "pandas",
    "scikit-learn",
    "schedule",
    "psycopg2",
    "sqlalchemy",
    "python-dotenv",
    "statsmodels"
]

[project.scripts]
protenderizer = "analyzer.cli:cli"

[tool.setuptools]
packages = ["analyzer"]